<resources>
    <string name="app_name">HW_SalesP</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sales_persons">SalesPersonsActivity</string>
    <string name="strID">Person ID</string>
    <string name="strFullName">Full Name</string>
    <string name="str_month">Month</string>
    <string name="str_year">Year</string>
    <string name="str_region_id">Region ID</string>
    <string name="str_region_name">Region Name</string>
    <string name="str_picture">Picture</string>
    <string name="str_view_commisttions">View Commissions</string>
    <string name="str_update">Update</string>
    <string name="txt_comm_id">Commission ID</string>
    <string name="txt_month">Month</string>
    <string name="txt_year">Year</string>
    <string name="txt_comm">Commission</string>
    <string name="btn_search">Search</string>
    <string name="btn_details">More Details</string>
    <string name="str_delete">Delete</string>
</resources>
