<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


<TableRow>



        <TextView
            android:id="@+id/textView12"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_comm_id"
            android:textSize="18sp" />
    <TextView
        android:id="@+id/txt_CommID"

        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

</TableRow>

<TableRow>

        <TextView
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_month"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_Month"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
</TableRow>

    <TableRow>

        <TextView
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_year"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_Year"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_comm"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_Comm"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/button7"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="1" />



        <Button
            android:id="@+id/btnCommDetails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_details" />



</TableLayout>